crates/apollo-compiler/test_data/diagnostics/0074_merge_identical_fields.txt
Error: operation must not select different types using the same name `name`
    ╭─[ 0074_merge_identical_fields.graphql:19:3 ]
    │
 18 │   name: nickname
    │   ───────┬──────  
    │          ╰──────── `name` is selected from `Dog.nickname: String` here
 19 │   name
    │   ──┬─  
    │     ╰─── `name` is selected from `Dog.name: String!` here
────╯
Error: cannot select different fields into the same alias `name`
    ╭─[ 0074_merge_identical_fields.graphql:19:3 ]
    │
 18 │   name: nickname
    │   ───────┬──────  
    │          ╰──────── `name` is selected from `Dog.nickname` here
 19 │   name
    │   ──┬─  
    │     ╰─── `name` is selected from `Dog.name` here
    │ 
    │ Help: Both fields may be present on the schema type, so it's not clear which one should be used to fill the response
────╯
Error: operation must not select different types using the same name `fido`
    ╭─[ 0074_merge_identical_fields.graphql:24:3 ]
    │
 23 │   fido: name
    │   ─────┬────  
    │        ╰────── `fido` is selected from `Dog.name: String!` here
 24 │   fido: nickname
    │   ───────┬──────  
    │          ╰──────── `fido` is selected from `Dog.nickname: String` here
────╯
Error: cannot select different fields into the same alias `fido`
    ╭─[ 0074_merge_identical_fields.graphql:24:3 ]
    │
 23 │   fido: name
    │   ─────┬────  
    │        ╰────── `fido` is selected from `Dog.name` here
 24 │   fido: nickname
    │   ───────┬──────  
    │          ╰──────── `fido` is selected from `Dog.nickname` here
    │ 
    │ Help: Both fields may be present on the schema type, so it's not clear which one should be used to fill the response
────╯

